--- a/styles/style.css
+++ b/styles/style.css
@@ -1,40 +1,29 @@
-.header {
+header {
   display: flex;
-  align-items: space-between;
-  justify-content: space-between;
-  align-items: start;
-  width: 1052px;
-  height: 105px;
-  padding: 92px 39px;
-  color: #000;
+  justify-content: center;
+  align-items: center;
+  min-width: 1100px;
+  margin: 0;
 }
 
-.header_menu_list {
-  display: flex;
-  list-style: none;
-  }
+.container_logo {
+  justify-self: center;
+  align-self: center;
+}
 
-.header_logo_image {   
-  display: block; 
+img {
   width: 148px;
   height: 105px;
-  flex-grow: 0;
 }
 
-
+.container {
+  display: grid;
+  grid-template-columns: 452px 148px 452px;
+  gap: 10px; 
+  margin-top: 92px;
 }
 
-.header_menu_link {
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+.container > * {
+  border: 1px solid #fd24af;
 }
-
-.header_menu_active .header_menu_link {
-  text-decoration: none;
-}
-
-
-
 
