--- a/styles/style.css
+++ b/styles/style.css
@@ -27,3 +27,16 @@ img {
   border: 1px solid #fd24af;
 }
 
+.contacts {
+  flex-direction: column;
+  align-content: start;
+  color: #000;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px; 
+  letter-spacing: 0.18px;
+  
+  
+  
+}
