--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,7 @@
-a {
-  text-underline-offset: 3px;
-}
-
 .header {
   display: grid;
-  grid-template-columns: 1fr min-content 1fr;
-  padding: 92px 50px 93px;
+  grid-template-columns: 1fr auto 1fr;
+  padding: 92px 50px;
 }
 
 .header__menu {
@@ -13,33 +9,28 @@ a {
 }
 
 .header__links-list {
-  list-style: circle;
   display: flex;
-  gap: 28px;
+  list-style: circle;
   font-size: 18px;
+  gap: 28px;
 }
 
 .header__links-list-item {
-  padding-left: 4px;
   letter-spacing: 0.18px;
   line-height: normal;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-left: 4px;
 }
 
 .header__links-list-item_no-bullit {
-  padding-left: 0;
   list-style-type: none;
-}
-
-.header__link:hover {
-  text-decoration: none;
+  padding-left: 0;
 }
 
 .header__link_active {
   text-decoration: none;
-}
-
-.header__link_active:hover {
-  text-decoration: underline;
 }
 
 .header__logo {
