--- a/styles/style.css
+++ b/styles/style.css
@@ -63,38 +63,40 @@
 .cover {
   background-image: url(../images/cover.jpg);
   background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  padding: 165px 50px 51px;
   position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 165px 50px 51px;
   color: #fff;
 }
 
 .overlay {
-  opacity: 0.6;
-  background: #000;
+  position: absolute;
   width: 100%;
   height: 100%;
-  position: absolute;
+  background-color: black;
+  opacity: 0.5;
+  z-index: 1;
   top: 0;
   left: 0;
-  z-index: 0;
 }
 
 .cover__title {
+  position: relative;
+  text-transform: uppercase;
   font-size: 100px;
   font-weight: 700;
   line-height: 115%;
+  font-style: normal;
   letter-spacing: 30px;
-  text-transform: uppercase;
-  position: relative;
-  z-index: 1;
   margin-bottom: 135px;
+  color: white;
+  z-index: 2;
 }
 
-.accent-span {
+.aligned-text {
   display: block;
-  margin-bottom: 20px;
+  margin-bottom: 20px; 
 }
 
 .text-center {
