--- a/styles/style.css
+++ b/styles/style.css
@@ -113,16 +113,6 @@
   letter-spacing: 60px;
 }
 
-/*
-
-.letter-spacing-0_4 {
-  letter-spacing: 0.4px;
-}
-
-.letter-spacing-0_1 {
-  letter-spacing: 0.1px;
-}*/
-
 .no-letter-spacing {
   letter-spacing: 0px;
 }
@@ -267,13 +257,13 @@
 }
 
 .about__logo {
-  background: #000;
-  border-radius: 50%;
-  width: 240px;
-  height: 240px;
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #000;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
 }
 
 .about__logo-image {
@@ -283,17 +273,43 @@
 
 .about__title {
   font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
   text-transform: uppercase;
   margin: 100px 0;
 }
 
 .about__text {
-  font-size: 20px;
-  letter-spacing: 0.2px;
-  line-height: 120%;
   display: flex;
   flex-direction: column;
   gap: 24px;
+  font-family: Raleway;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; 
+  letter-spacing: 0.2px;
+}
+
+.letter-spacing-0-4 {
+  letter-spacing: 0.4px;
+}
+
+.letter-spacing-0-6 {
+  letter-spacing: 0.6px;
+}
+
+.letter-spacing-0-1 {
+  letter-spacing: 0.1px;
+}
+
+.letter-spacing-0--1 {
+  letter-spacing: -0.1px;
+}
+
+.letter-spacing-0--3 {
+  letter-spacing: -0.3px;
 }
 
 .footer {
