--- a/styles/style.css
+++ b/styles/style.css
@@ -313,33 +313,48 @@
 }
 
 .footer {
-  display: grid;
-  grid-template-columns: 1fr min-content 1fr;
-  padding: 0 51px 88px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0 50px;
+  margin-bottom: 90px;
+}
+
+.footer__menu {
+  height: 100%;
 }
 
 .footer__menu-list {
-  list-style: none;
   text-align: center;
-  width: 150px;
-  font-size: 18px;
 }
 
-.footer__menu-link:hover {
-  text-decoration: none;
+.footer__menu-list-item {
+  font-weight: normal;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  font-size: 18px;
+  line-height: 21px;
 }
 
 .footer__menu-link_active {
   text-decoration: none;
 }
 
+.underline {
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+}
+
 .footer__social-list {
-  list-style: none;
   display: flex;
+  flex-direction: row;
+  list-style: none;
   gap: 48px;
-  justify-content: end;
+  color: #000;
 }
 
 .footer__social-icon {
   width: 48px;
+  height: 48px;
+  color: #000;
 }
