--- a/styles/style.css
+++ b/styles/style.css
@@ -75,7 +75,7 @@
   height: 100%;
   background-color: black;
   opacity: 0.5;
-  z-index: 1;
+  z-index: -1;
   top: 0%;
   left: 0%;
 }
@@ -90,12 +90,16 @@
   letter-spacing: 30px;
   margin-bottom: 135px;
   color: white;
-  z-index: 2;
+  z-index: 1;
 }
 
 .aligned-text {
   display: block;
   margin-bottom: 20px;
+}
+
+.aligned-text:last-child { 
+  margin-bottom: 0px; 
 }
 
 .aligned-text-center {
@@ -134,17 +138,18 @@
   color: white;
 }
 
-.description-text-extended-1 {
+.description-text-extended-large {
   word-spacing: 18px;
   letter-spacing: -0.4px;
   }
 
-.description-text-extended-2 {
+.description-text-extended-small {
   word-spacing: 18px;
   letter-spacing: -0.1px;
   }
 
 .bet-button {
+  font-family: Raleway, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 22px;
@@ -152,7 +157,7 @@
   line-height: 26px;
   border-width: 1px;
   border-style: solid;
-  border-color: white;
+  border-color: currentColor;
   background-color: transparent;
   color: white;
   padding: 12px 32px;
@@ -203,21 +208,19 @@
   height: 100%;
   color: #fff;
   padding: 50px 40px 47px;
+  background-repeat: no-repeat;
 }
 
 .card_type_film {
   background: url(../images/card-lot-01.jpg);
-  background-repeat: no-repeat;
 }
 
 .card_type_book {
   background: url(../images/card-lot-02.jpg);
-  background-repeat: no-repeat;
 }
 
 .card_type_picture {
   background: url(../images/card-lot-03.jpg);
-  background-repeat: no-repeat;
 }
 
 .card__title {
@@ -283,7 +286,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
