--- a/styles/style.css
+++ b/styles/style.css
@@ -97,23 +97,23 @@
   display: block;
   margin-bottom: 20px;
 }
-  
+
 .aligned-text-center {
   text-align: center;
-  line-height: 100%;
+  line-height: 1; 
 }
 
 .aligned-text-right {
   text-align: right;
-  line-height: 100%;
-}  
+  line-height: 1; 
+}
 
 .letter-spacing-extended {
   letter-spacing: 60px;
 }
 
 .no-letter-spacing {
-  letter-spacing: 0px;
+  letter-spacing: 0;
 }
 
 .cover__description {
