--- a/styles/style.css
+++ b/styles/style.css
@@ -98,6 +98,10 @@
   margin-bottom: 20px;
 }
 
+.aligned-text:last-child {
+  margin-bottom: 0px;
+}
+
 .aligned-text-center {
   text-align: center;
   line-height: 1;
