--- a/styles/style.css
+++ b/styles/style.css
@@ -291,29 +291,8 @@
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
-  letter-spacing: 0.2px;
+  letter-spacing: 0.2px;;
 }
-/*
-.letter-spacing-0-4 {
-  letter-spacing: 0.4px;
-}
-
-.letter-spacing-0-6 {
-  letter-spacing: 0.6px;
-}
-
-.letter-spacing-0-1 {
-  letter-spacing: 0.1px;
-}
-
-.letter-spacing-0--1 {
-  letter-spacing: -0.1px;
-}
-
-.letter-spacing-0--3 {
-  letter-spacing: -0.3px;
-}
-*/
 
 .footer {
   display: flex;
