--- a/styles/style.css
+++ b/styles/style.css
@@ -106,15 +106,10 @@
   text-align: center;
   line-height: 100%;
 }
-
-.aligned-text-center {
-  text-align: center;
-  line-height: 1;
-}
   
 .aligned-text-right {
   text-align: right;
-  line-height: 1;
+  line-height: 100%;
 }
 
 .letter-spacing-extended {
@@ -214,7 +209,6 @@
   height: 100%;
   color: #fff;
   padding: 50px 40px 47px;
-  background-repeat: no-repeat;
 }
 
 .card_type_film {
